welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: illegal start of simple pattern
	for (case <- 0 to n-1) {
             ^Array1:23: error: '<-' expected but '}' found.
}
^